--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
 script:
 - godep go test ./...
 - make deb-local
-- if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then pip install --user awscli && ~/.local/bin/aws s3 cp --acl public-read deb/*.deb s3://heroku-hsup; fi
+- if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then b="build-$TRAVIS_BRANCH-$TRAVIS_COMMIT.tgz"; pip install --user awscli && cd deb && tar -czf $b *.deb && ~/.local/bin/aws s3 cp --acl public-read $b s3://heroku-hsup; fi
 notifications:
   email: false
 cache:
